# MKIDSpeckleControl

./: .gitignore  CMakeLists.txt  README.md  setup.py  speckNullConfig.info
include/: BadPixFilt.h  DMChannel.h  ImageGrabber.h  SpeckleBasic.h  SpeckleController.h  SpeckleKalman.h  SpeckleKalmanPoisson.h  SpeckleNuller.h  SpeckleToDM.h  dmTools.h  dmspeck.h  imageTools.h  loopFunctions.h  params.h
modal/: GMat.py  calibrator.py  controller.py  gmat.py  imageUtils.py  offlineem.py  qcontroller.py  qmodel.py  runEMScript.py
python/: PTreeWrapper.h  PyPropertyTree.cpp  PySpeckleNuller.cpp  PySpeckleToDM.cpp  SpeckPy.cpp  dmcal.py  dmcal_example.cfg  logParser.py  loopScripts.py  speckNullConfig.info  tools.py
scripts/: dmcal.py  logParser.py  runLoop.py  runPacketmaster.py  speckNullConfig.info
sim/: MKIDImageSim.cpp  linDMToMKID.cpp
speckpy/: SpeckPy.cpp  __init__.py  loopScripts.py  utils.py
src/: BadPixFilt.cpp  DMChannel.cpp  ImageGrabber.cpp  SpeckleBasic.cpp  SpeckleController.cpp  SpeckleKalman.cpp  SpeckleKalmanPoisson.cpp  SpeckleNuller.cpp  SpeckleToDM.cpp  dmTools.cpp  imageTools.cpp  loopFunctions.cpp  mainScript.cpp
test/: main.cpp
tests/: main.cpp
